--- a/requirements.txt
+++ b/requirements.txt
@@ -5,104 +5,29 @@ attrs==23.1.0
 bcrypt==4.2.1
 blinker==1.7.0
 certifi==2023.7.22
-cffi @ file:///private/tmp/cffi-20231211-48023-ij9e0o/cffi-1.16.0
+cffi==1.15.1
 charset-normalizer==3.3.2
 click==8.1.7
-contourpy==1.1.1
 cryptography==42.0.7
-cycler==0.11.0
-Django==5.0
-dnspython==2.7.0
-ecdsa==0.19.0
-email_validator==2.2.0
-exceptiongroup==1.2.2
 fastapi==0.115.6
-fastapi-cli==0.0.4
-filelock==3.14.0
 Flask==3.0.0
 Flask-Cors==4.0.1
-fonttools==4.42.1
-fsspec==2024.5.0
 h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
 httpx==0.27.0
-huggingface-hub==0.23.2
-idna==3.10
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
 joblib==1.3.2
-kiwisolver==1.4.5
-Levenshtein==0.26.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
 matplotlib==3.8.0
-mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.3
 numpy==1.26.0
 orjson==3.10.3
-outcome==1.2.0
-packaging==24.2
 pandas==2.1.1
 passlib==1.7.4
-Pillow==10.0.1
-pipdeptree==2.24.0
-pluggy==1.3.0
-protobuf==4.21.12
-psycopg2-binary==2.9.10
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.10.3
-pydantic-settings==2.7.0
-pydantic_core==2.27.1
-Pygments==2.18.0
-pyparsing==3.1.1
-PySocks==1.7.1
 pytest==7.4.2
 python-dateutil==2.8.2
-python-dotenv==1.0.1
 python-jose==3.3.0
-python-Levenshtein==0.26.1
-python-multipart==0.0.9
-pytz==2023.3.post1
-PyYAML==6.0.2
-RapidFuzz==3.11.0
-regex==2024.5.15
-requests==2.31.0
-rich==13.7.1
-rsa==4.9
-safetensors==0.4.3
+SQLAlchemy==2.0.36
 scikit-learn==1.3.1
 scipy==1.11.3
-seaborn==0.12.2
-selenium==4.13.0
 sentence-transformers==3.3.1
-sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.36
-sqlparse==0.4.4
-starlette==0.41.3
-sympy==1.12
-threadpoolctl==3.2.0
-tokenizers==0.19.1
 torch==2.3.0
-tqdm==4.66.4
 transformers==4.41.1
-trio==0.22.2
-trio-websocket==0.11.1
-typer==0.12.3
-typing_extensions==4.12.2
-tzdata==2023.3
-ujson==5.10.0
-urllib3==2.0.6
 uvicorn==0.32.1
 uvloop==0.19.0
-watchfiles==0.22.0
-websockets==12.0
-Werkzeug==3.0.1
-wsproto==1.2.0
